Alignment fixes.

--- a/frontend/src/app/microsoft-login/microsoft-login.component.css
+++ b/frontend/src/app/microsoft-login/microsoft-login.component.css
@@ -29,3 +29,18 @@ mat-spinner.main-spin {
 .loading {
   text-align: center;
 }
+
+.signinButton {
+  margin: auto;
+}
+
+
+.signin {
+  align-content: center;
+  padding-left: auto;
+  padding-right: auto;
+  padding-top: 1vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
